[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://src/Main/StateMachine/State.gd" type="Script" id=2]
[ext_resource path="res://src/Main/WaveMover/WaveMover.gd" type="Script" id=3]
[ext_resource path="res://assets/Eneimies/spr_enemy00.png" type="Texture" id=4]
[ext_resource path="res://src/Main/WaveMover/StateMachine/Inactive.gd" type="Script" id=5]
[ext_resource path="res://src/Main/WaveMover/StateMachine/Spawn.gd" type="Script" id=6]
[ext_resource path="res://src/Main/WaveMover/StateMachine/Active.gd" type="Script" id=7]

[node name="WaveMover" type="Node2D"]
script = ExtResource( 3 )

[node name="spr_enemy00" type="Sprite" parent="."]
position = Vector2( -136, 8 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
centered = false

[node name="spr_enemy01" type="Sprite" parent="."]
position = Vector2( -88, 8 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
centered = false

[node name="spr_enemy02" type="Sprite" parent="."]
position = Vector2( -40, 8 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
centered = false

[node name="spr_enemy03" type="Sprite" parent="."]
position = Vector2( 8, 8 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
centered = false

[node name="spr_enemy04" type="Sprite" parent="."]
position = Vector2( 56, 8 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
centered = false

[node name="spr_enemy05" type="Sprite" parent="."]
position = Vector2( 104, 8 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
centered = false

[node name="WaveTween" type="Tween" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
initial_state = NodePath("Inactive")

[node name="Inactive" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Active" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Destroy" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
[connection signal="tween_completed" from="WaveTween" to="." method="_on_WaveTween_tween_completed"]
